--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <h1>cRaZpAcK</h1><br>
-<a href="cRaZpAcK.mcpack">cRaZyPaCk v1</a><br>
+<a href="cRaZpAcK_v1.mcpack">cRaZyPaCk v1</a><br>
 More Versions:<br>
 There currently are no other available versions.
